--- a/tool_server/notebooks/test_selectsubplot_tool.ipynb
+++ b/tool_server/notebooks/test_selectsubplot_tool.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "13e7bfa0-d0d3-4578-bcc1-bd53363616a5",
    "metadata": {
     "tags": []
@@ -197,7 +197,7 @@
     "import base64\n",
     "\n",
     "# 设置 API 密钥\n",
-    "api_key = \"AIzaSyDlmb73omTgAGvw_a9lGxK5pC56fuLtJoQ\"  # 替换为你的 API 密钥\n",
+    "api_key = \"your-api-key\"  # 替换为你的 API 密钥\n",
     "\n",
     "# 设置代理（如果需要）\n",
     "proxies = {\n",
